added CircleScanCard and RectangleScreenCard

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">TestDeviceScanner</string>
+    <string name="scan">Scan</string>
+    <string name="device_scan">Device Scan</string>
+    <string name="show_you_all_info">Show you all info about phone</string>
+    <string name="check_for_viruses">Check for Viruses</string>
+    <string name="check">Check</string>
+    <string name="problems">Problems</string>
 </resources>
