--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="check">Check</string>
     <string name="problems">Problems</string>
     <string name="device_info">Device info</string>
+    <string name="dashboard">Dashboard</string>
 </resources>
